# chess

./: CMakeLists.txt  Chess.sln
include/: chessboard.hpp  pieces.hpp
src/: chessboard.cpp  pieces.cpp  ui_main.cpp
